Core: meetup refactored

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
 
 <script src="js/kurento-utils.js"></script>
 <script src="js/index.js"></script>
-<title>Video conferencing</title>
+<title>Meetup</title>
 </head>
 <body>
 	<header>
@@ -48,11 +48,9 @@
 					data-title="Video Call 1 to 1 Media Pipeline"
 					data-footer="Two interconnected WebRtcEnpoints Media Elements">Media
 					Pipeline</a> is composed by two interconnected <i>WebRtcEndpoints</i>.
-				To run this demo follow these steps:
+				To run this demo, follow the below steps.
 			</p>
 			<ol>
-				<li>Open this page with a browser compliant with WebRTC
-					(Chrome, Firefox).</li>
 				<li>Type a nick in the field <i>Name</i> and click on <i>Register</i>.
 				</li>
 				<li>In a different machine (or a different tab in the same
